...
    android:orientation="vertical"
    tools:context=".ListActivity">

    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>

    <ListView
        android:id="@+id/moodList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>

    <LinearLayout
...
        android:background="@android:color/transparent"
        android:gravity="bottom|end"
        android:orientation="horizontal">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addMoodButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@android:color/holo_blue_bright"
...
