...
    <!-- am = add mood, em = edit mood -->
    <string name="am_ok_text">Post</string>
    <string name="am_cancel_text">Cancel</string>
    <string name="em_ok_text">Save</string>
    <string name="em_cancel_text">Cancel</string>

    <string name="menu_delete">Delete</string>

    <!-- sm = side bar -->
    <string name="sb_profile">Profile</string>
    <string name="sb_feed">Feed</string>
    <string name="sb_following">Following</string>
    <string name="sb_map">Locations</string>
...
