<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group1">
        <item android:id="@+id/nav_item_profile"
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/sb_profile"
            app:itemTextColor = "@color/drwer_font"/>

        <item android:id="@+id/nav_item_feed"
            android:icon="@drawable/ic_people_black_24dp"

            android:title="@string/sb_feed" />

        <!-- TODO find an appropriate icon -->
        <item android:id="@+id/nav_item_following"
            android:icon="@drawable/ic_menu_button"
            android:title="@string/sb_following"
            app:itemTextColor = "@color/drwer_font"/>

        <item android:id="@+id/nav_item_map"
            android:icon="@drawable/ic_map_white_24dp"
            android:title="@string/sb_map"
            app:itemTextColor = "@color/drwer_font"/>
    </group>

    <group android:id="@+id/group2" >
        <!-- TODO find an appropriate icon -->
        <item android:id="@+id/nav_item_log_out"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/sb_log_out"
            app:itemTextColor = "@color/drwer_font"
            app:itemIconTint="@color/drwer_font"/>
    </group>

</menu>